--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap');
+:root {
+  --seeBlue: #bfcfe7;
+  --lightSee: #d8efef;
+  --gray:#eeeeee;
+  --navy:#161e31;
+  --orange:#f88460;
+  --liteGray:#f9f7f5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+font-family: Ubuntu, "times new roman", times, roman, serif;
+  font-size: 48px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2{
+  font-family: 'Poppins', sans-serif;
+  font-size: 36px;
 }
+h3{
+  font-family: 'Poppins', sans-serif;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 24px;
 }
+h4{
+  font-family: 'Poppins', sans-serif;
 
-.App-link {
-  color: #61dafb;
+  font-size: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p{
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
 }
