--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif,'poppins';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+h1{
+  font-family: Ubuntu, "times new roman", times, roman, serif !important;
+    font-size: 48px;
+  }
+  h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 36px;
+  }
+  h3{
+    font-family: 'Poppins', sans-serif;
+  
+    font-size: 24px;
+  }
+  h4{
+    font-family: 'Poppins', sans-serif;
+  
+    font-size: 20px;
+  }
+  p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+  }
+
+
